k8s/networkpolicy/default-deny-client-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: client
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
